# pushary-crewai

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic.py
src/pushary_crewai/: __init__.py
tests/: test_crewai.py
