[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pushary-crewai"
version = "0.1.0"
description = "Human-in-the-loop for CrewAI: a BaseTool that asks a real human on their phone and blocks on a fail-closed answer, instead of the console human_input prompt."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Pushary", email = "business@pushary.com" }]
keywords = [
    "crewai",
    "human-in-the-loop",
    "ai-agents",
    "approvals",
    "basetool",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pushary>=1.3.2",
    "crewai>=1.0,<2",
]

[project.urls]
Homepage = "https://pushary.com/human-in-the-loop-crewai"
Repository = "https://github.com/Pushary/pushary-crewai"
Documentation = "https://pushary.com/docs/agents/adapters"

[tool.hatch.build.targets.wheel]
packages = ["src/pushary_crewai"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pushary_crewai",
    "README.md",
    "LICENSE",
    "tests",
]
